fix: видалено platform:arm64 для кросплатформної сумісності

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,8 @@
 services:
-  # MSSQL Database (Azure SQL Edge для ARM64 підтримки)
+  # MSSQL Database (Azure SQL Edge для кросплатформної підтримки)
   db:
     image: mcr.microsoft.com/azure-sql-edge:latest
     container_name: dentistry_db
-    platform: linux/arm64
     restart: always
     environment:
       ACCEPT_EULA: "Y"
