feat: allow SQLite fallback via DB_ENGINE

--- a/backend/env.example
+++ b/backend/env.example
@@ -2,12 +2,17 @@
 DJANGO_SECRET_KEY=your-secret-key-here-change-in-production
 DJANGO_DEBUG=True
 
-# MSSQL Database Settings
+# Database Settings
+# DB_ENGINE can be "mssql" (default) or "sqlite"
+DB_ENGINE=mssql
 DB_NAME=dentistry
 DB_USER=sa
 DB_PASSWORD=your-strong-password-here
 DB_HOST=localhost
 DB_PORT=1433
+# Optional overrides for MSSQL driver/params
+# DB_DRIVER="ODBC Driver 18 for SQL Server"
+# DB_EXTRA_PARAMS=TrustServerCertificate=yes
 
 # Django Security
 ALLOWED_HOSTS=localhost,127.0.0.1
